Further work on Publisher